# libflowtuple

./: .gitignore  CMakeLists.txt  COPYING  Makefile.am  NEWS  README  autogen.sh  configure.ac
lib/libflowtuple/: Makefile.am  class.c  data.c  error.c  flowtuple.c  flowtuple.h  fttypes.h  header.c  interval.c  record.c  record.h  trailer.c  util.c  util.h
tools/: flow2ascii.c  flowproto.c
